# lib/api/docs/swagger.js
@@ -112,12 +112,6 @@ const doc = {
         $email: "johndough@example.com",
         $password: "password"
       },
-      authuser:{
-        $_id: "64df73b31e5eda5eb868ddcd",
-        $username: "johndough",
-        $email: "johndough@gmail.com",
-        $name: "John"
-      },
       removesong: {
         $playlist_id: "ObjectId('64e748f0cb18ad90657b9043')",
         $track_id: "78kf73b31e6yda5eb868dder",
